--- a/templates/index.html
+++ b/templates/index.html
@@ -48,37 +48,37 @@
                     </div>
                     <div class="card-deck cardfontcolor mb-1 d-flex justify-content-center">
                     <div class="card mx-5">
-                        <a href="scratch_object.html"><img src="dura-fX2_01.png" class="card-img-top" alt="object1"></a>
+                        <a href="/object"><img src="dura-fX2_01.png" class="card-img-top" alt="object1"></a>
                         <div class="card-body">
                         <h5 class="card-title">Object 1</h5>
                         <p class="card-text">Description of object</p>
-                        <a href="scratch_object.html" class="btn btn-primary stretched-link">Learn More</a>
+                        <a href="/object" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
                     <div class="card mx-5">
-                        <a href="scratch_object.html"><img src="dura-fX2_01.png" class="card-img-top" alt="object2"></a>
+                        <a href="/object"><img src="dura-fX2_01.png" class="card-img-top" alt="object2"></a>
                         <div class="card-body">
                         <h5 class="card-title">Object 2</h5>
                         <p class="card-text">Description of object</p>
-                        <a href="scratch_object.html" class="btn btn-primary stretched-link">Learn More</a>
+                        <a href="/object" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
                     </div>
                     <div class="card-deck cardfontcolor d-flex justify-content-center">
                     <div class="card mx-5">
-                        <a href="scratch_object.html"><img src="dura-fX2_01.png" class="card-img-top" alt="object3"></a>
+                        <a href="/object"><img src="dura-fX2_01.png" class="card-img-top" alt="object3"></a>
                         <div class="card-body">
                         <h5 class="card-title">Object 3</h5>
                         <p class="card-text">Description of object</p>
-                        <a href="scratch_object.html" class="btn btn-primary stretched-link">Learn More</a>
+                        <a href="/object" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
                     <div class="card mx-5">
-                        <a href="scratch_object.html"><img src="dura-fX2_01.png" class="card-img-top" alt="object4"></a>
+                        <a href="/object"><img src="dura-fX2_01.png" class="card-img-top" alt="object4"></a>
                         <div class="card-body">
                         <h5 class="card-title">Object 4</h5>
                         <p class="card-text">Description of object</p>
-                        <a href="scratch_object.html" class="btn btn-primary stretched-link">Learn More</a>
+                        <a href="/object" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
                 </div>
