Modified filesystem to match flask server

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
         <link href="gear.ico" rel="icon">
 
-        <link href="styles.css" rel="stylesheet">
+        <link href="/static/styles.css" rel="stylesheet">
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -27,13 +27,13 @@
     <br><br><br>
     <body class="background">
             <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
-                <a class="navbar-brand" href="index.html"><span style="color: gray;">COG</span></a>
+                <a class="navbar-brand" href="/"><span style="color: gray;">COG</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                         <ul class="navbar-nav ml-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">QR Code Generator</a></li>
                             <li class="nav-item"><a class="nav-link" href="https://en.wikipedia.org/wiki/Dura-Europos">Other Resources</a></li>
                         </ul>
@@ -48,7 +48,7 @@
                     </div>
                     <div class="card-deck cardfontcolor mb-1 d-flex justify-content-center">
                     <div class="card mx-5">
-                        <a href="/object"><img src="dura-fX2_01.png" class="card-img-top" alt="object1"></a>
+                        <a href="/object"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object1"></a>
                         <div class="card-body">
                         <h5 class="card-title">Object 1</h5>
                         <p class="card-text">Description of object</p>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="card mx-5">
-                        <a href="/object"><img src="dura-fX2_01.png" class="card-img-top" alt="object2"></a>
+                        <a href="/object"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object2"></a>
                         <div class="card-body">
                         <h5 class="card-title">Object 2</h5>
                         <p class="card-text">Description of object</p>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="card-deck cardfontcolor d-flex justify-content-center">
                     <div class="card mx-5">
-                        <a href="/object"><img src="dura-fX2_01.png" class="card-img-top" alt="object3"></a>
+                        <a href="/object"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object3"></a>
                         <div class="card-body">
                         <h5 class="card-title">Object 3</h5>
                         <p class="card-text">Description of object</p>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="card mx-5">
-                        <a href="/object"><img src="dura-fX2_01.png" class="card-img-top" alt="object4"></a>
+                        <a href="/object"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object4"></a>
                         <div class="card-body">
                         <h5 class="card-title">Object 4</h5>
                         <p class="card-text">Description of object</p>
