--- a/templates/scratch_object.html
+++ b/templates/scratch_object.html
@@ -13,7 +13,7 @@
 
         <link href="gear.ico" rel="icon">
 
-        <link href="styles.css" rel="stylesheet">
+        <link href="/static/styles.css" rel="stylesheet">
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -27,7 +27,7 @@
     <br><br><br>
     <body class="background">
             <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
-                <a class="navbar-brand" href="index.html"><span style="color: gray;">COG</span></a>
+                <a class="navbar-brand" href="/"><span style="color: gray;">COG</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -48,7 +48,7 @@
                         <h1> Object 1 </h1>
                     </a>
                     <div class="image-wrap">
-                        <img src="dura-fX2_01.png" alt="object1" class="img-fluid">
+                        <img src="/static/dura-fX2_01.png" alt="object1" class="img-fluid">
                         <a href="#explanation">
                             <div style="position: absolute; top: 25%; left: 25%; border: solid blue; padding-bottom: 10%; padding-right:50%">
                                 
@@ -63,7 +63,7 @@
                     <a id="explanation">
                         <p> Explaination of what is going on </p>
                     </a>
-                    <img src="dura-satellite.jpg" alt="locational image">
+                    <img src="/static/dura-satellite.jpg" alt="locational image">
                 </div>
                 <br>
                 <br>
