--- a/static/styles.css
+++ b/static/styles.css
@@ -124,3 +124,22 @@ h4 {
     background-color: white;
     opacity: 1;
 }
+
+#btnScrollToTop { 
+    position: fixed; 
+    right: 10px; 
+    bottom: 10px; 
+    width: 50px; 
+    height: 50px; 
+    border-radius: 50%; 
+    background: red; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25); 
+    color: white; 
+    border: none; 
+    outline: none; 
+    cursor: pointer; 
+} 
+
+#btnScrollToTop:active { 
+    background: #cc2333; 
+}
