--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <title>COG</title>
 
 </head>
@@ -90,6 +92,15 @@
                 </div>
             </main>
         </div>
+        <button id="btnScrollToTop"> 
+            <i class="material-icons">arrow_upward</i>
+        </button> 
+        <script> 
+            const btnScrollToTop = document.querySelector("#btnScrollToTop"); 
+            btnScrollToTop.addEventListener("click", function() { 
+                $("html, body").animate({scrollTop: 0 }, "slow"); 
+            }); 
+        </script>
     </body>
 
 </html>
