--- a/templates/scratch_object.html
+++ b/templates/scratch_object.html
@@ -11,7 +11,7 @@
         <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="gear.ico" rel="icon">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='/gear.ico') }}">
 
         <link href="/static/styles.css" rel="stylesheet">
 
