Fixed bounding box for mobile screentypes

--- a/templates/latin_object.html
+++ b/templates/latin_object.html
@@ -41,21 +41,21 @@
             </nav>
 
         <div class="vertical-center">
-            <main class="container p-5">
+            <main class="container">
 
                 <div class="wid">
                     <a href="#explanation">
                         <h1> Object 1 </h1>
                     </a>
                     <div class= "wrapper">
-                        <img src={{image}} alt="object1" class="img-fluid">
-                        <a href="#explanation">
-                            <div style="position: absolute; top: 0%; left: 0%; border: solid blue; padding-bottom: 10%; padding-right:10%">
-                            </div>
-                        </a>
+                            <img src={{image}} alt="object1" class="img-fluid">
+                            <a href="#explanation">
+                                <div style="position: absolute; top: 0%; left: 0%; border: solid blue; padding-bottom: 10%; padding-right:10%">
+                                </div>
+                            </a>
                     </div>
 
-                    
+
                     <br>
                     <h3>Inscription 1</h5>
                     <h4>Translation</h4>
