--- a/static/styles.css
+++ b/static/styles.css
@@ -23,10 +23,14 @@ main
     text-align: center;
 }
 
+
 main img
 {
     /* constrain images on small screens */
     max-width: 100%;
+    object-fit: cover;
+    width: 100%;
+
 }
 
 .background {
@@ -53,6 +57,7 @@ h3 {
 .wid {
     margin-left: 10%;
     margin-right: 10%;
+
 }
 
 body {
@@ -106,11 +111,19 @@ h4 {
 .image-wrap {
     position: relative;
     width: 100%;
+    height: auto;
+
+}
+
+.wrapper {
+    max-width: 100%; 
+    max-height: 100%; 
+    position: relative;
 }
 
 .img-fluid {
     max-width: 100%;
-    height:auto;
+    height:100%;
 }
 
 .entirebox {
