added  color outline dropdown selector

--- a/static/styles.css
+++ b/static/styles.css
@@ -156,3 +156,13 @@ h4 {
 #btnScrollToTop:active { 
     background: #cc2333; 
 }
+
+.boundingbox {
+    position: absolute; 
+    top: 0%; 
+    left: 0%; 
+    border: solid blue; 
+    padding-bottom: 10%; 
+    padding-right:10%
+}
+
