--- a/templates/latin_object.html
+++ b/templates/latin_object.html
@@ -11,7 +11,7 @@
         <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="gear.ico" rel="icon">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='/gear.ico') }}">
 
         <link href="/static/styles.css" rel="stylesheet">
 
@@ -19,7 +19,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-        <title>Scratch Object</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+        <title>COG</title>
 
 </head>
 
@@ -50,11 +52,19 @@
                     <div class= "wrapper">
                             <img src={{image}} alt="object1" class="img-fluid">
                             <a href="#explanation">
-                                <div style="position: absolute; top: 0%; left: 0%; border: solid blue; padding-bottom: 10%; padding-right:10%">
+                                <div class="boundingbox">
                                 </div>
                             </a>
                     </div>
 
+                    <label for="colors">If desired, change bounding box outline color:</label>
+
+                    <select name="colors" id="colors">
+                        <option value="blue" selected>Blue</option>
+                        <option value="silver">Silver</option>
+                        <option value="red">Red</option>
+                        <option value="black">Black</option>
+                    </select>
 
                     <br>
                     <h3>Inscription 1</h5>
@@ -72,6 +82,21 @@
                 </div>
             </main>
         </div>
+        <button id="btnScrollToTop"> 
+            <i class="material-icons">arrow_upward</i>
+        </button> 
+        <script> 
+            const btnScrollToTop = document.querySelector("#btnScrollToTop"); 
+            btnScrollToTop.addEventListener("click", function() { 
+                $("html, body").animate({scrollTop: 0 }, "slow"); 
+            }); 
+
+            
+            $("#colors").change(function(){
+                let color = $("#colors").val();
+                $('.boundingbox').css("border", "solid " + color);
+            });
+        </script>
     </body>
 
 </html>
