--- a/templates/scratch_object.html
+++ b/templates/scratch_object.html
@@ -52,10 +52,19 @@
                     <div class= "wrapper">
                         <img src={{image}} alt="object1" class="img-fluid">
                         <a href="#explanation">
-                            <div style="position: absolute; top: 0%; left: 0%; border: solid blue; padding-bottom: 10%; padding-right:10%">
+                            <div class="boundingbox">
                             </div>
                         </a>
                     </div>
+
+                    <label for="colors">If desired, change bounding box outline color:</label>
+
+                    <select name="colors" id="colors">
+                        <option value="blue" selected>Blue</option>
+                        <option value="silver">Silver</option>
+                        <option value="red">Red</option>
+                        <option value="black">Black</option>
+                    </select>
 
                     
                     <br>
@@ -82,6 +91,14 @@
             btnScrollToTop.addEventListener("click", function() { 
                 $("html, body").animate({scrollTop: 0 }, "slow"); 
             }); 
+
+            
+            $("#colors").change(function(){
+                let color = $("#colors").val();
+                $('.boundingbox').css("border", "solid " + color);
+            });
+
+
         </script>
     </body>
 
