--- a/templates/qr_code.html
+++ b/templates/qr_code.html
@@ -47,7 +47,7 @@
                     <h1>Generate QR Codes</h1>
                     <img class="qr-code img-thumbnail img-responsive"/>
                     <br><br>
-                    <input type="text" size="60" maxlength="1000" class="form-control" id="content" placeholder="Enter URL of Page to be Generated" style="text-align: center;"/>
+                    <input type="text" size="60" maxlength="1000" class="form-control" id="content" placeholder="Enter URL of Page to be Generated" style="text-align: center; width: calc(33% - 20px); margin-left: 495px"/>
                     <br><br>
                     <button type="button" class="btn btn-default" id="generate">
                         Generate
