--- a/templates/latin_object.html
+++ b/templates/latin_object.html
@@ -47,14 +47,20 @@
 
                 <div class="wid">
                     <a href="#explanation">
-                        <h1> Object 1 </h1>
+                        <h1> Latin Inscription </h1>
                     </a>
                     <div class= "wrapper">
                             <img src={{image}} alt="object1" class="img-fluid">
-                            <a href="#explanation">
-                                <div class="boundingbox">
-                                </div>
-                            </a>
+                            {%for entry in translations%}
+                                <a href="#{{entry[0]}}">
+                                    <div class="boundingbox" style="left: {{entry[2][0]}}%; top: {{entry[2][1]}}%; padding-right: {{entry[2][2]}}%; padding-bottom: {{entry[2][3]}}%;" id="{{entry[0]}}.pos"></div>
+                                </a>
+                            {%endfor%}
+                            {%for entry in depictions%}
+                                <a href="#{{entry[0]}}">
+                                    <div class="boundingbox" style="left: {{entry[1][0]}}%; top: {{entry[1][1]}}%; padding-right: {{entry[1][2]}}%; padding-bottom: {{entry[1][3]}}%;" id="{{entry[0]}}.pos"></div>
+                                </a>
+                            {%endfor%}
                     </div>
 
                     <label for="colors">If desired, change bounding box outline color:</label>
@@ -71,12 +77,13 @@
                         <!-- Loading in data from Flask and using Jinja to put the data onto the page-->
                         <h1>Inscriptions on this Object</h1> <br>
                         {%for entry in translations%}
-                            <h3>Inscription:</h3>
+                            <h3 id="{{entry[0]}}">Inscription:</h3>
                                 <text>{{entry[0]}}</text>
                             <h4>Translation:</h4>
                                 <text>{{entry[1]}}</text>
-                            <h4>Location on Image:</h4>
-                                <text>{{entry[2]}}</text>
+                            <a href="#{{entry[0]}}.pos"> 
+                                <h4>Location on Image</h4> 
+                            </a>
                                 <br>
                                 <br>
                         {%endfor%}
@@ -85,10 +92,11 @@
                     <div>
                         <h1>Depictions on this Object</h1> <br>
                         {%for entry in depictions%}
-                            <h3>Depicts:</h3>
+                            <h3 id="{{entry[0]}}">Depicts:</h3>
                                 <a href="{{entry[0]}}">{{entry[0]}}</a>
-                            <h4>Location on Image:</h4>
-                                <text>{{entry[1]}}</text>
+                            <a href="#{{entry[0]}}.pos"> 
+                                <h4>Location on Image</h4> 
+                            </a>
                                 <br>
                                 <br>
                         {%endfor%}
@@ -121,6 +129,8 @@
                 let color = $("#colors").val();
                 $('.boundingbox').css("border", "solid " + color);
             });
+
+
         </script>
     </body>
 
