--- a/templates/latin_object copy.html
+++ b/templates/latin_object copy.html
@@ -47,20 +47,14 @@
 
                 <div class="wid">
                     <a href="#explanation">
-                        <h1> Latin Inscription </h1>
+                        <h1> Object 1 </h1>
                     </a>
                     <div class= "wrapper">
                             <img src={{image}} alt="object1" class="img-fluid">
-                            {%for entry in translations%}
-                                <a href="#{{entry[0]}}">
-                                    <div class="boundingbox" style="left: {{entry[2][0]}}%; top: {{entry[2][1]}}%; padding-right: {{entry[2][2]}}%; padding-bottom: {{entry[2][3]}}%;" id="{{entry[0]}}.pos"></div>
-                                </a>
-                            {%endfor%}
-                            {%for entry in depictions%}
-                                <a href="#{{entry[0]}}">
-                                    <div class="boundingbox" style="left: {{entry[1][0]}}%; top: {{entry[1][1]}}%; padding-right: {{entry[1][2]}}%; padding-bottom: {{entry[1][3]}}%;" id="{{entry[0]}}.pos"></div>
-                                </a>
-                            {%endfor%}
+                            <a href="#explanation">
+                                <div class="boundingbox">
+                                </div>
+                            </a>
                     </div>
 
                     <label for="colors">If desired, change bounding box outline color:</label>
@@ -77,26 +71,26 @@
                         <!-- Loading in data from Flask and using Jinja to put the data onto the page-->
                         <h1>Inscriptions on this Object</h1> <br>
                         {%for entry in translations%}
-                            <h4 id="{{entry[0]}}"> Inscription:</h4>
+                            <h3>Inscription:</h3>
                                 <text>{{entry[0]}}</text>
                             <h4>Translation:</h4>
                                 <text>{{entry[1]}}</text>
-                            <a href="#{{entry[0]}}.pos"> 
-                                <h4>Location on Image</h4> 
-                            </a>
-                            <hr style="border-width:5px">    
+                            <h4>Location on Image:</h4>
+                                <text>{{entry[2]}}</text>
+                                <br>
+                                <br>
                         {%endfor%}
                     </div>
 
                     <div>
                         <h1>Depictions on this Object</h1> <br>
                         {%for entry in depictions%}
-                            <h4 id="{{entry[0]}}">Depicts:</h4>
+                            <h3>Depicts:</h3>
                                 <a href="{{entry[0]}}">{{entry[0]}}</a>
-                            <a href="#{{entry[0]}}.pos"> 
-                                <h4>Location on Image</h4> 
-                            </a>
-                            <hr style="border-width:5px">
+                            <h4>Location on Image:</h4>
+                                <text>{{entry[1]}}</text>
+                                <br>
+                                <br>
                         {%endfor%}
                     </div>
 
@@ -127,8 +121,6 @@
                 let color = $("#colors").val();
                 $('.boundingbox').css("border", "solid " + color);
             });
-
-
         </script>
     </body>
 
