--- a/templates/latin_object.html
+++ b/templates/latin_object.html
@@ -27,7 +27,7 @@
 
     </head>
     <br><br><br>
-    <body class="background">
+    <body class="background" onload="addInfo()">
             <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
                 <a class="navbar-brand" href="/"><span style="color: gray;">COG</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
@@ -77,25 +77,33 @@
                         <!-- Loading in data from Flask and using Jinja to put the data onto the page-->
                         <h1>Inscriptions on this Object</h1> <br>
                         {%for entry in translations%}
-                            <h4 id="{{entry[0]}}"> Inscription:</h4>
-                                <text>{{entry[0]}}</text>
-                            <h4>Translation:</h4>
-                                <text>{{entry[1]}}</text>
+                            <div id="{{entry[0]}}">
+                                <h4> Inscription:</h4>
+                                    <text>{{entry[0]}}</text>
+                                    <br>
+                                <h4>Translation:</h4>
+                                    <text>{{entry[1]}}</text>
+                                    <br>
+                            </div>
                             <a href="#{{entry[0]}}.pos"> 
                                 <h4>Location on Image</h4> 
                             </a>
                             <hr style="border-width:5px">    
                         {%endfor%}
                     </div>
-
+                    <br>
+                    <br>
+                    <br>
                     <div>
                         <h1>Depictions on this Object</h1> <br>
                         {%for entry in depictions%}
-                            <h4 id="{{entry[0]}}">Depicts:</h4>
-                                <a href="{{entry[0]}}">{{entry[0]}}</a>
-                            <a href="#{{entry[0]}}.pos"> 
-                                <h4>Location on Image</h4> 
-                            </a>
+                            <div id="{{entry[0]}}">
+                                <h4>Depicts:</h4>
+                                    <a href="{{entry[0]}}">{{entry[0]}}</a>
+                                <a href="#{{entry[0]}}.pos"> 
+                                    <h4>Location on Image</h4> 
+                                </a>
+                            </div>
                             <hr style="border-width:5px">
                         {%endfor%}
                     </div>
@@ -128,6 +136,15 @@
                 $('.boundingbox').css("border", "solid " + color);
             });
 
+            function addInfo() {
+                let newSection = document.createElement("h4")
+                newSection.innerHTML = "Editor's Note: spem bonan"
+                let newInfo = document.createElement("text")
+                newInfo.innerHTML = "The literal translation of spem bonam is 'good hope'. Within the vernacular expressions of the Roman Army, however, spes, 'hope' referred specifically to 'hope of promotion'. Sometimes the titles of officers included among those performing technical roles (the immunes) would include the phrase ad spem (‘towards promotion’) to reflect that the individual was qualified for promotion. Officers in line to become centurions who had not achieved that rank before their term of service was completed would sometimes remain in the army in the role of retentus ad spem ('retained in hope of promotion')."
+                // newSection.after(newInfo)
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newSection)
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newInfo)
+            }
 
         </script>
     </body>
