--- a/templates/latin_object copy.html
+++ b/templates/latin_object copy.html
@@ -97,7 +97,7 @@
                     <a id="explanation">
                         <p> Explaination of what is going on </p>
                     </a>
-                    <img src="/static/dura-satellite.jpg" alt="locational image">
+                    <img src="http://www.athenapub.com/aria1/_Syria/md_syria-dura-satellite.jpg" alt="locational image">
                 </div>
                 <br>
                 <br>
