Added maps for each page + accuracy disclaimer

--- a/templates/latin_object.html
+++ b/templates/latin_object.html
@@ -112,6 +112,7 @@
                     <a id="explanation">
                         <p> Explaination of what is going on </p>
                     </a>
+                    <p>The Location Shown Below is Approximate, calculated from Map Coordinates and Projected onto a Satellite Image of Dura-Europos</p>
                     <div class= "wrapper" onLoad="loadfunc(40.727421, 34.750515)">
                         <img src="http://www.athenapub.com/aria1/_Syria/md_syria-dura-satellite.jpg" alt="map" class="img-fluid">
                         <div id="pinpoint" class= "pinpoint" style= "">
