--- a/templates/gad_relief.html
+++ b/templates/gad_relief.html
@@ -111,7 +111,22 @@
                     <a id="explanation">
                         <p> Explaination of what is going on </p>
                     </a>
-                    <img src="/static/dura-satellite.jpg" alt="locational image">
+                    <p>The Location Shown Below is Approximate, calculated from Map Coordinates and Projected onto a Satellite Image of Dura-Europos</p>
+                    <div class= "wrapper" onLoad="loadfunc(40.727421, 34.750515)">
+                        <img src="http://www.athenapub.com/aria1/_Syria/md_syria-dura-satellite.jpg" alt="map" class="img-fluid">
+                        <div id="pinpoint" class= "pinpoint" style= "">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="50" height="50" viewBox="0 0 256 256" xml:space="preserve" >
+                                <desc>Created with Fabric.js 1.7.22</desc>
+                                <defs>
+                                </defs>
+                                <g transform="translate(128 128) scale(0.72 0.72)" style="">
+                                    <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)" >
+                                    <path d="M 45 0 C 25.463 0 9.625 15.838 9.625 35.375 c 0 8.722 3.171 16.693 8.404 22.861 L 45 90 l 26.97 -31.765 c 5.233 -6.167 8.404 -14.139 8.404 -22.861 C 80.375 15.838 64.537 0 45 0 z M 45 48.705 c -8.035 0 -14.548 -6.513 -14.548 -14.548 c 0 -8.035 6.513 -14.548 14.548 -14.548 s 14.548 6.513 14.548 14.548 C 59.548 42.192 53.035 48.705 45 48.705 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                                </g>
+                                </g>
+                                </svg>
+                        </div>
+                    </div>
                 </div>
                 <br>
                 <br>
@@ -130,10 +145,21 @@
                 $("html, body").animate({scrollTop: 0 }, "slow"); 
             }); 
 
+            document.addEventListener('DOMContentLoaded', function() {
+                const xval = (40.730809 * 60321.7158176944) - 2456580;
+                const yval = (34.747401 *  -79238.8525986936) + 2753796.232036354943122;
+                const xpercent = (xval / 703) * 100;
+                const ypercent = (yval / 800) * 100;
+                const xpercentstring = xpercent.toString() + '%';
+                const ypercentstring = ypercent.toString() + '%';
+                $('.pinpoint').css("top", ypercentstring);
+                $('.pinpoint').css("left", xpercentstring); 
+            }, false);
             
             $("#colors").change(function(){
                 let color = $("#colors").val();
                 $('.boundingbox').css("border", "solid " + color);
+                $('path').css("fill", color);
             });
 
             function addInfo() {
