Added box drop down and fixed ordering of boxes on page

--- a/static/styles.css
+++ b/static/styles.css
@@ -166,6 +166,14 @@ h4 {
     padding-right:10%
 }
 
+.inscriptions {
+    display: block;
+}
+
+.depictions {
+    display: block;
+}
+
 path {
     fill: blue;
 }
