--- a/templates/julius_terentius.html
+++ b/templates/julius_terentius.html
@@ -53,12 +53,12 @@
                             <img src={{image}} alt="object1" class="img-fluid">
                             {%for entry in depictions%}
                                 <a href="#{{entry[0]}}">
-                                    <div class="boundingbox" style="left: {{entry[1][0]}}%; top: {{entry[1][1]}}%; padding-right: {{entry[1][2]}}%; padding-bottom: {{entry[1][3]}}%;" id="{{entry[0]}}.pos"></div>
+                                    <div class="boundingbox" style="left: {{entry[1][0]}}%; top: {{entry[1][1]}}%; padding-right: {{entry[1][2] * 0.9}}%; padding-bottom: {{entry[1][3] * 0.75}}%;" id="{{entry[0]}}.pos"></div>
                                 </a>
                             {%endfor%}
                             {%for entry in translations%}
                                 <a href="#{{entry[0]}}">
-                                    <div class="boundingbox" style="left: {{entry[2][0]}}%; top: {{entry[2][1]}}%; padding-right: {{entry[2][2]}}%; padding-bottom: {{entry[2][3]}}%;" id="{{entry[0]}}.pos"></div>
+                                    <div class="boundingbox" style="left: {{entry[2][0]}}%; top: {{entry[2][1]}}%; padding-right: {{entry[2][2] * 0.9}}%; padding-bottom: {{entry[2][3] * 0.75}}%;" id="{{entry[0]}}.pos"></div>
                                 </a>
                             {%endfor%}
                     </div>
