--- a/templates/gad_relief.html
+++ b/templates/gad_relief.html
@@ -164,7 +164,47 @@
             });
 
             function addInfo() {
-                
+                let newSection = document.createElement("h4")
+                newSection.innerHTML = "Editor's Note: Gad of Dura"
+                let newInfo = document.createElement("text")
+                newInfo.innerHTML = "Gad is an Aramaic deity equivalent to the Greek Tyche (Fortune), who often acts as a titulary deity and protector of named cities. Here Gad is represented as Zeus Olympias - bearded, carrying a sceptre, and enthroned between two eagles. This is in stark contrast to the companion relief of this inscription, which shows the Gad of Tadmor (the indigenous name for Palmyra) as a goddess, following the type of a famous relief of the Tyche of Antioch. This inscription is especially significant for being the earliest dated attestation that the indigenous name of the city was Dura."
+                $("#גדא\\ די\\ דוא\\ עבד\\ חירנ\\ \\/\\ בר\\ מלכו\\ בר\\ נצור\\ בירח\\ ניסנ\\ \\/\\ שנת\\ 470").append(newSection)
+                $("#גדא\\ די\\ דוא\\ עבד\\ חירנ\\ \\/\\ בר\\ מלכו\\ בר\\ נצור\\ בירח\\ ניסנ\\ \\/\\ שנת\\ 470").append(newInfo)
+
+                let newSection2 = document.createElement("h4")
+                newSection2.innerHTML = "Editor's Note: Hairan Son of Maliku"
+                let newInfo2 = document.createElement("text")
+                newInfo2.innerHTML = "Hairan son of Maliku was a member of the Palmyrene aristocracy associated with Dura-Europos in the 2nd century CE. Scholars have suggested that he may be an ancestor of the husband of Queen Zenobia, the Palmyrene ruler who rebelled against the Roman empire in the 3rd century CE. He is known from two relief inscriptions at Dura-Europos, one dedicated to the Gad of Dura and the other to the Tyche of Palmyra. The sanctuary in which these two dedications were made, the Temple of the Gadde, seems to have enjoyed significant financing from Hairan’s family. Ann Perkins observes that the subtle differences in the sculpting of the two pieces indicates that two different craftsmen worked on them. The two are still similar in style, however, and given their close dating (both from 159 CE), the likelihood is that Hairan employed two sculptors from the same workshop simultaneously in order to make a double dedication."
+                $("#גדא\\ די\\ דוא\\ עבד\\ חירנ\\ \\/\\ בר\\ מלכו\\ בר\\ נצור\\ בירח\\ ניסנ\\ \\/\\ שנת\\ 470").append(newSection2)
+                $("#גדא\\ די\\ דוא\\ עבד\\ חירנ\\ \\/\\ בר\\ מלכו\\ בר\\ נצור\\ בירח\\ ניסנ\\ \\/\\ שנת\\ 470").append(newInfo2)
+
+                let newSection3 = document.createElement("h4")
+                newSection3.innerHTML = "Editor's Note: Month Nisan"
+                let newInfo3 = document.createElement("text")
+                newInfo3.innerHTML = "Nisan is a month in the Hebrew calendars, corresponding roughly to April. Although Palmyrene inscriptions from Dura-Europos use the Seleucid Era for dating the years, their practice seems to have been to use the Hebrew calendar for the months. Find out more at https://en.wikipedia.org/wiki/Nisan"
+                $("#גדא\\ די\\ דוא\\ עבד\\ חירנ\\ \\/\\ בר\\ מלכו\\ בר\\ נצור\\ בירח\\ ניסנ\\ \\/\\ שנת\\ 470").append(newSection3)
+                $("#גדא\\ די\\ דוא\\ עבד\\ חירנ\\ \\/\\ בר\\ מלכו\\ בר\\ נצור\\ בירח\\ ניסנ\\ \\/\\ שנת\\ 470").append(newInfo3)
+
+                let newSection4 = document.createElement("h4")
+                newSection4.innerHTML = "Editor's Note: Year 470"
+                let newInfo4 = document.createElement("text")
+                newInfo4.innerHTML = "The year 470 refers to a date in the Seleucid Era, a system of dating instituted by the dynasty of Hellenistic kings created by Seleucus I Nicator. Despite the collapse of the Seleucids and the take over of the region containing Dura-Europos by the Parthian empire, local populations continued to use the same dating system - as we can see here - right through into the Roman era."
+                $("#גדא\\ די\\ דוא\\ עבד\\ חירנ\\ \\/\\ בר\\ מלכו\\ בר\\ נצור\\ בירח\\ ניסנ\\ \\/\\ שנת\\ 470").append(newSection4)
+                $("#גדא\\ די\\ דוא\\ עבד\\ חירנ\\ \\/\\ בר\\ מלכו\\ בר\\ נצור\\ בירח\\ ניסנ\\ \\/\\ שנת\\ 470").append(newInfo4)
+
+                let newSection5 = document.createElement("h4")
+                newSection5.innerHTML = "Editor's Note: Seleukos Nikator"
+                let newInfo5 = document.createElement("text")
+                newInfo5.innerHTML = "Hellenistic King and founder of the Seleucid Empire. Legendary founder of Dura-Europos. Find out more at https://en.wikipedia.org/wiki/Seleucus_I_Nicator "
+                $("#סלוקוס\\ \\/\\ ניקטור").append(newSection5)
+                $("#סלוקוס\\ \\/\\ ניקטור").append(newInfo5)
+
+                let newSection6 = document.createElement("h4")
+                newSection6.innerHTML = "Editor's Note: Hairan son of Maliku"
+                let newInfo6 = document.createElement("text")
+                newInfo6.innerHTML = "Hairan son of Maliku was a member of the Palmyrene aristocracy associated with Dura-Europos in the 2nd century CE. Scholars have suggested that he may be an ancestor of the husband of Queen Zenobia, the Palmyrene ruler who rebelled against the Roman empire in the 3rd century CE. He is known from two relief inscriptions at Dura-Europos, one dedicated to the Gad of Dura and the other to the Tyche of Palmyra. The sanctuary in which these two dedications were made, the Temple of the Gadde, seems to have enjoyed significant financing from Hairan’s family. Ann Perkins observes that the subtle differences in the sculpting of the two pieces indicates that two different craftsmen worked on them. The two are still similar in style, however, and given their close dating (both from 159 CE), the likelihood is that Hairan employed two sculptors from the same workshop simultaneously in order to make a double dedication."
+                $("#צלמ\\ חירנ\\ בר\\ \\/\\ מלכו\\ בר\\ נצור").append(newSection6)
+                $("#צלמ\\ חירנ\\ בר\\ \\/\\ מלכו\\ בר\\ נצור").append(newInfo6)
             }
 
         </script>
