--- a/templates/votive_relief.html
+++ b/templates/votive_relief.html
@@ -164,9 +164,48 @@
             });
 
             function addInfo() {
-                
-            }
+                let newSection = document.createElement("h4")
+                newSection.innerHTML = "Editor's Note: Julius Aurelius Malochus"
+                let newInfo = document.createElement("text")
+                newInfo.innerHTML = "The ‘Malochus’ element of this personal name is Aramaic and means ‘counselor’. It has also been found in another inscription from Palmyra, dated to 265 CE, which names a Julius Aurelius Septimius Malkhu son of Maloka son of Nassum. Charles Torrey suggests that since this Maloka was a contemporary of the Maloka in this inscription, they may have come from the same family. It is significant to note that the individual who dedicated this relief uses a Roman tria nomina - the naming convention consisting of three parts which was the preserve of Roman citizens. Find out more about the tria nomina at https://en.wikipedia.org/wiki/Roman_naming_conventions#Tria_nomina"
+                $("#Θεᾆ\\ Νεμέσι\\ Ἰούλιος\\ Αὐρήλιος\\ Μαλωχὰς\\ \\/\\ Σουδαίου\\ Παλμυρηνὸς\\ εὐξάμενος\\ ἀνέθηκεν").append(newSection)
+                $("#Θεᾆ\\ Νεμέσι\\ Ἰούλιος\\ Αὐρήλιος\\ Μαλωχὰς\\ \\/\\ Σουδαίου\\ Παλμυρηνὸς\\ εὐξάμενος\\ ἀνέθηκεν").append(newInfo)
 
+                let newSection2 = document.createElement("h4")
+                newSection2.innerHTML = "Editor's Note: Nemesis"
+                let newInfo2 = document.createElement("text")
+                newInfo2.innerHTML = "Greco-Roman goddess known for exacting retribution from individuals who show hubris. Find out more at https://en.wikipedia.org/wiki/Nemesis"
+                $("#Θεᾆ\\ Νεμέσι\\ Ἰούλιος\\ Αὐρήλιος\\ Μαλωχὰς\\ \\/\\ Σουδαίου\\ Παλμυρηνὸς\\ εὐξάμενος\\ ἀνέθηκεν").append(newSection2)
+                $("#Θεᾆ\\ Νεμέσι\\ Ἰούλιος\\ Αὐρήλιος\\ Μαλωχὰς\\ \\/\\ Σουδαίου\\ Παλμυρηνὸς\\ εὐξάμενος\\ ἀνέθηκεν").append(newInfo2)
+
+                let newSection3 = document.createElement("h4")
+                newSection3.innerHTML = "Editor's Note: Maloka"
+                let newInfo3 = document.createElement("text")
+                newInfo3.innerHTML = "Maloka is an Aramaic personal name which means ‘counselor’. It has also been found in another inscription from Palmyra, dated to 265 CE, which names a Julius Aurelius Septimius Malkhu son of Maloka son of Nassum. Charles Torrey suggests that since this Maloka was a contemporary of the Maloka in this inscription, they may have come from the same family."
+                $("#עבד\\ ומודא\\ מלוכא\\ בר\\ שודי\\ תדמריא\\ לנמסיס\\ \\/\\ שנת\\ \\ 556").append(newSection3)
+                $("#עבד\\ ומודא\\ מלוכא\\ בר\\ שודי\\ תדמריא\\ לנמסיס\\ \\/\\ שנת\\ \\ 556").append(newInfo3)
+
+                let newSection4 = document.createElement("h4")
+                newSection4.innerHTML = "Editor's Note: Shudai"
+                let newInfo4 = document.createElement("text")
+                newInfo4.innerHTML = "Shudai is an Aramaic personal name, which Charles Torrey identifies as deriving from the word meaning ‘promise’ or ‘acknowledgement’. The Greek version of this name, Σουδαίας, is also attested on a stela from Hauran. Torrey speculates that they may refer to the same person. Lucinda Dirven notes, however, that the name is not attested in Palmyra."
+                $("#עבד\\ ומודא\\ מלוכא\\ בר\\ שודי\\ תדמריא\\ לנמסיס\\ \\/\\ שנת\\ \\ 556").append(newSection4)
+                $("#עבד\\ ומודא\\ מלוכא\\ בר\\ שודי\\ תדמריא\\ לנמסיס\\ \\/\\ שנת\\ \\ 556").append(newInfo4)
+
+                let newSection5 = document.createElement("h4")
+                newSection5.innerHTML = "Editor's Note: Nemesis"
+                let newInfo5 = document.createElement("text")
+                newInfo5.innerHTML = "Greco-Roman goddess known for exacting retribution from individuals who show hubris. Intriguingly, unlike other Greco-Roman gods, for whom a Palmyrene equivalent was identified, Nemesis’ name is simply transliterated in the Aramaic text. At the time this relief was discovered, it was the first time the name of the goddess had been found in a Semitic inscription. Find out more about Nemesis at https://en.wikipedia.org/wiki/Nemesis"
+                $("#עבד\\ ומודא\\ מלוכא\\ בר\\ שודי\\ תדמריא\\ לנמסיס\\ \\/\\ שנת\\ \\ 556").append(newSection5)
+                $("#עבד\\ ומודא\\ מלוכא\\ בר\\ שודי\\ תדמריא\\ לנמסיס\\ \\/\\ שנת\\ \\ 556").append(newInfo5)
+
+                let newSection6 = document.createElement("h4")
+                newSection6.innerHTML = "Editor's Note: Year 556"
+                let newInfo6 = document.createElement("text")
+                newInfo6.innerHTML = "This date, given in Aramaic numerals, gives a year from the Seleucid Era dating system. This mode of dating was instituted by the dynasty of Hellenistic kings created by Seleucus I Nicator. Despite the collapse of the Seleucids and the take over of the region containing Dura-Europos by the Parthian empire, local populations continued to use the same dating system - as we can see here - right through into the Roman era."
+                $("#עבד\\ ומודא\\ מלוכא\\ בר\\ שודי\\ תדמריא\\ לנמסיס\\ \\/\\ שנת\\ \\ 556").append(newSection6)
+                $("#עבד\\ ומודא\\ מלוכא\\ בר\\ שודי\\ תדמריא\\ לנמסיס\\ \\/\\ שנת\\ \\ 556").append(newInfo6)
+            }
         </script>
     </body>
 
