--- a/templates/latin_object.html
+++ b/templates/latin_object.html
@@ -178,12 +178,68 @@
 
             function addInfo() {
                 let newSection = document.createElement("h4")
-                newSection.innerHTML = "Editor's Note: spem bonan"
+                newSection.innerHTML = "Editor's Note: Impera[tori]"
                 let newInfo = document.createElement("text")
-                newInfo.innerHTML = "The literal translation of spem bonam is 'good hope'. Within the vernacular expressions of the Roman Army, however, spes, 'hope' referred specifically to 'hope of promotion'. Sometimes the titles of officers included among those performing technical roles (the immunes) would include the phrase ad spem (‘towards promotion’) to reflect that the individual was qualified for promotion. Officers in line to become centurions who had not achieved that rank before their term of service was completed would sometimes remain in the army in the role of retentus ad spem ('retained in hope of promotion')."
-                // newSection.after(newInfo)
-                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newSection)
-                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newInfo)
+                newInfo.innerHTML = "This is the dative form of Imperator, the Latin term for the Roman Emperor. Find out more at https://en.wikipedia.org/wiki/Imperator#Imperator_as_an_imperial_title"
+                $("#Impera\\[tori\\]\\/\\ Caesari\\ \\/\\ bona\\ fortuna\\ nobis\\ \\/\\ summo\\ summo\\ \\/\\ senatui\\ populoque\\ Romano").append(newSection)
+                $("#Impera\\[tori\\]\\/\\ Caesari\\ \\/\\ bona\\ fortuna\\ nobis\\ \\/\\ summo\\ summo\\ \\/\\ senatui\\ populoque\\ Romano").append(newInfo)
+                
+                let newSection2 = document.createElement("h4")
+                newSection2.innerHTML = "Editor's Note: Caesari"
+                let newInfo2 = document.createElement("text")
+                newInfo2.innerHTML = "This is the dative form of Caesar, a title given to the Roman Emperors, that was originally derived from the name of Julius Caesar and his immediate successors. Find out more at https://en.wikipedia.org/wiki/Caesar_(title)"
+                $("#Impera\\[tori\\]\\/\\ Caesari\\ \\/\\ bona\\ fortuna\\ nobis\\ \\/\\ summo\\ summo\\ \\/\\ senatui\\ populoque\\ Romano").append(newSection2)
+                $("#Impera\\[tori\\]\\/\\ Caesari\\ \\/\\ bona\\ fortuna\\ nobis\\ \\/\\ summo\\ summo\\ \\/\\ senatui\\ populoque\\ Romano").append(newInfo2)
+      
+                let newSection3 = document.createElement("h4")
+                newSection3.innerHTML = "Editor's Note: Summo Summo"
+                let newInfo3 = document.createElement("text")
+                newInfo3.innerHTML = "This text has been mostly erased and replaced with cross-lines."
+                $("#Impera\\[tori\\]\\/\\ Caesari\\ \\/\\ bona\\ fortuna\\ nobis\\ \\/\\ summo\\ summo\\ \\/\\ senatui\\ populoque\\ Romano").append(newSection3)
+                $("#Impera\\[tori\\]\\/\\ Caesari\\ \\/\\ bona\\ fortuna\\ nobis\\ \\/\\ summo\\ summo\\ \\/\\ senatui\\ populoque\\ Romano").append(newInfo3)
+
+                let newSection4 = document.createElement("h4")
+                newSection4.innerHTML = "Editor's Note: SPQR"
+                let newInfo4 = document.createElement("text")
+                newInfo4.innerHTML = "The abbreviation, expanded here, was very old by the time this inscription was written. It referred to the Roman government in the time of the Republic, before Emperors began to rule in Rome, but persisted throughout the Roman empire. Find out more at https://en.wikipedia.org/wiki/SPQR"
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newSection4)
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newInfo4)
+            
+                let newSection5 = document.createElement("h4")
+                newSection5.innerHTML = "Editor's Note: spem bonan"
+                let newInfo5 = document.createElement("text")
+                newInfo5.innerHTML = "The literal translation of spem bonam is 'good hope'. Within the vernacular expressions of the Roman Army, however, spes, 'hope' referred specifically to 'hope of promotion'. Sometimes the titles of officers included among those performing technical roles (the immunes) would include the phrase ad spem (‘towards promotion’) to reflect that the individual was qualified for promotion. Officers in line to become centurions who had not achieved that rank before their term of service was completed would sometimes remain in the army in the role of retentus ad spem ('retained in hope of promotion')."
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newSection5)
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newInfo5)
+
+                let newSection6 = document.createElement("h4")
+                newSection6.innerHTML = "Editor's Note: Librarius (Roman Army)"
+                let newInfo6 = document.createElement("text")
+                newInfo6.innerHTML = "The librarius within the Roman Army was a clerk or record keeper. The holder of this office ranked among the immunes, those in the army who were exempted from mundane tasks such as wall building. Many different types of skill would enable an ordinary legionary soldier to become an immunes; for instance, specialists in working copper or bronze might become an aerarius and a leather-worker might be designated as a shoemaker (sutores). The grant of immunitas did not involve any increase in salary but did hold some prospect of promotion. A librarius was attached to almost every office within the army, possibly even to each century. At Dura-Europos, the Latin Inscription from the Praetorium includes reference to several adiutores (deputies) working alongside the librarius, Julius Domininus. In this case, it seems likely that Domininus was assigned as librarius to the commander of the detachment of the Legio IV Scythica stationed at Dura-Europos and that his deputies served the centuries making up that detachment. As there are four deputies, it is possible to surmise that the detachment consisted of four centuries."
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newSection6)
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newInfo6)
+            
+                let newSection7 = document.createElement("h4")
+                newSection7.innerHTML = "Editor's Note: Adiutor (Roman Army)"
+                let newInfo7 = document.createElement("text")
+                newInfo7.innerHTML = "An adiutor was an administrative assistant in the Roman Army. The adiutores might be attached to any number of offices within the army and would be one of less senior roles. In the Latin Inscription from the Praetorium at Dura-Europos, the four adiutores named alongside the librarius, Julius Domininus, would seem to be his subordinates. The ‘hope of promotion’ mentioned in the inscription would therefore seem to indicate that these individuals hoped to succeed to the position of librarius in the future."
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newSection7)
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newInfo7)
+            
+                let newSection8 = document.createElement("h4")
+                newSection8.innerHTML = "Editor's Note: Legio IIII Scythica"
+                let newInfo8 = document.createElement("text")
+                newInfo8.innerHTML = "This refers to one of the legions from which the garrison at Dura-Europos was derived. Find out more at https://en.wikipedia.org/wiki/Legio_IV_Scythica"
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newSection8)
+                $("#Spem\\ bonam\\ \\/\\ Iulio\\ Domnino\\ lib\\(rario\\)\\ \\/\\ et\\ Aurel\\(io\\)\\ Antiocho\\ \\/\\ et\\ Donnio\\ Pasia\\(nus\\?\\)\\ \\/\\ et\\ Septimio\\ Sigilliano\\ \\/\\ et\\ Aurelio\\ Magno\\ \\/\\ adiutoribus\\ \\/\\ leg\\(ionis\\)\\ IIII\\ Scy\\(thicae\\)").append(newInfo8)
+            
+                let newSection9 = document.createElement("h4")
+                newSection9.innerHTML = "Editor's Note: 534"
+                let newInfo9 = document.createElement("text")
+                newInfo9.innerHTML = "These Aramaic numerals were read by Professor Julian J. Obermann and reported by Rostovtzeff in his final report. This is a date in the Seleucid Era (a mode of dating that persisted in this region from the Seleucid Empire, which had been ruled by Hellenistic Greek kings) and in the modern system gives the year 222-3 CE."
+                $("#\\35 34").append(newSection9)
+                $("#\\35 34").append(newInfo9)
+
             }
 
         </script>
