fixed links in navbar and souped up the QR code pg

--- a/templates/arsu_relief.html
+++ b/templates/arsu_relief.html
@@ -21,26 +21,25 @@
 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <title>COG</title>
-
-</head>
+        <title>Arsu Relief</title>
 
     </head>
+
     <br><br><br>
     <body class="background" onload="addInfo()">
-            <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
-                <a class="navbar-brand" href="/"><span style="color: gray;">COG</span></a>
-                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                        <ul class="navbar-nav ml-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="#about">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#setlist">QR Code Generator</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#videos">Other Resources</a></li>
-                        </ul>
-                </div>
-            </nav>
+        <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
+            <a class="navbar-brand" href="/"><img src="/static/cog.png" style="padding-left: 10%" height="55" alt="COG"></a>
+            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/qr_code">QR Code Generator</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://en.wikipedia.org/wiki/Dura-Europos">Other Resources</a></li>
+                    </ul>
+            </div>
+        </nav>
 
         <div class="vertical-center">
             <main class="container">
