--- a/templates/index.html
+++ b/templates/index.html
@@ -21,15 +21,14 @@
 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <title>COG</title>
-
-</head>
+        <title>Home</title>
 
     </head>
+
     <br><br><br>
     <body class="background">
             <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
-                <a class="navbar-brand" href="/"><span style="color: gray;">COG</span></a>
+                <a class="navbar-brand" href="/"><img src="/static/cog.png" style="padding-left: 10%" height="55" alt="COG"></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -52,16 +51,14 @@
                     <div class="card mx-5">
                         <a href="/latin_inscription"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object1"></a>
                         <div class="card-body">
-                        <h5 class="card-title">Object 1</h5>
-                        <p class="card-text">Description of object</p>
+                        <h5 class="card-title">Latin Inscription</h5>
                         <a href="/latin_inscription" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
                     <div class="card mx-5">
                         <a href="/arsu_relief"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object2"></a>
                         <div class="card-body">
-                        <h5 class="card-title">Object 2</h5>
-                        <p class="card-text">Description of object</p>
+                        <h5 class="card-title">Arsu Relief</h5>
                         <a href="/arsu_relief" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
@@ -70,20 +67,34 @@
                     <div class="card mx-5">
                         <a href="/gad_relief"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object3"></a>
                         <div class="card-body">
-                        <h5 class="card-title">Object 3</h5>
-                        <p class="card-text">Description of object</p>
+                        <h5 class="card-title">Gad Relief</h5>
                         <a href="/gad_relief" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
                     <div class="card mx-5">
                         <a href="/julius_terentius"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object4"></a>
                         <div class="card-body">
-                        <h5 class="card-title">Object 4</h5>
-                        <p class="card-text">Description of object</p>
+                        <h5 class="card-title">Julius Terentius</h5>
                         <a href="/julius_terentius" class="btn btn-primary stretched-link">Learn More</a>
                         </div>
                     </div>
-                </div>
+                    </div>
+                    <div class="card-deck cardfontcolor d-flex justify-content-center">
+                        <div class="card mx-5">
+                            <a href="/votive_relief"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object3"></a>
+                            <div class="card-body">
+                            <h5 class="card-title">Votive Relief</h5>
+                            <a href="/votive_relief" class="btn btn-primary stretched-link">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="card mx-5">
+                            <a href="/mithras_relief"><img src="/static/dura-fX2_01.png" class="card-img-top" alt="object4"></a>
+                            <div class="card-body">
+                            <h5 class="card-title">Mithras Relief</h5>
+                            <a href="/mithras_relief" class="btn btn-primary stretched-link">Learn More</a>
+                            </div>
+                        </div>
+                        </div>
                 <br>
                 <br>
                 <div class="border-top">
