--- a/templates/qr_code.html
+++ b/templates/qr_code.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,50 +10,59 @@
         <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="gear.ico" rel="icon">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='/gear.ico') }}">
 
-        <link href="styles.css" rel="stylesheet">
+        <link href="/static/styles.css" rel="stylesheet">
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <title>QR Code Generator</title>
 
-        <style>
-            .qr-code {
-              max-width: 200px;
-              margin: 10px;
-            }
-        </style>
     </head>
     <br><br><br>
     <body class="background">
-            <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
-                <a class="navbar-brand" href="index.html"><span style="color: gray;">COG</span></a>
-                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                        <ul class="navbar-nav ml-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="#about">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#setlist">QR Code Generator</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#videos">Other Resources</a></li>
-                        </ul>
-                </div>
-            </nav>
+        <nav class="navbar navbar-expand-md navbar-light border-bottom fixed-top scrolling-navbar background">
+            <a class="navbar-brand" href="/"><img src="/static/cog.png" style="padding-left: 10%" height="55" alt="COG"></a>
+            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/qr_code">QR Code Generator</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://en.wikipedia.org/wiki/Dura-Europos">Other Resources</a></li>
+                    </ul>
+            </div>
+        </nav>
 
-        <div class="vertical-center">
+            <main class="container" style="padding-bottom: 5px">
                 <div class="text-center">
-                    <h1>Generate QR Codes</h1>
-                    <img class="qr-code img-thumbnail img-responsive"/>
+                    <h1>Generate QR Code</h1>
+                    <img id="image" class="qr-code img-thumbnail img-responsive" hidden/>
                     <br><br>
-                    <input type="text" size="60" maxlength="1000" class="form-control" id="content" placeholder="Enter URL of Page to be Generated" style="text-align: center; width: calc(33% - 20px); margin-left: 495px"/>
+                    <input type="text" size="60" maxlength="1000" class="form-control" id="content" placeholder="Enter URL of Page to be Generated" style="text-align: center; width: 50%;"/>
                     <br><br>
                     <button type="button" class="btn btn-default" id="generate">
                         Generate
                     </button>
+                    <br><br>
+                    <label hidden for="width" id="w">Width: </label>
+                    <select hidden name="width" id="width">
+                        <option value="96px" selected>1x1 inches</option>
+                        <option value="192px">2x2 inches</option>
+                        <option value="288px">3x3 inches</option>
+                        <option value="384px">4x4 inches</option>
+                        <option value="480px">5x5 inches</option>
+                    </select>
+                    <button hidden type="button" class="btn btn-default" id="print">
+                        Print QR Code
+                    </button>
                 </div>
+            </main>
             <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
             <script>
                 function htmlEncode(value) {
@@ -61,11 +71,60 @@
 
                 $(function () {
                     $('#generate').click(function () {
+                        if ($('#content').val() == "") {
+                            return;
+                        }
                         let finalURL = 'https://chart.googleapis.com/chart?cht=qr&chl=' + htmlEncode($('#content').val()) + '&chs=160x160&chld=L|0'
                         $('.qr-code').attr('src', finalURL);
+                        $('.qr-code').removeAttr('hidden');
+                        $("#print").removeAttr('hidden');
+                        $("#width").removeAttr('hidden');
+                        $("#w").removeAttr('hidden');
+                    });
+                });
+
+                // code below adapted from https://htmldom.dev/print-an-image/
+
+                document.addEventListener('DOMContentLoaded', function () {
+                    // Query the element
+                    const printBtn = document.getElementById('print');
+    
+                    printBtn.addEventListener('click', function () {
+                        // Create a fake iframe
+                        const iframe = document.createElement('iframe');
+    
+                        // Make it hidden
+                        iframe.style.height = 0;
+                        iframe.style.visibility = 'hidden';
+                        iframe.style.width = 0;
+    
+                        // Set the iframe's source
+                        iframe.setAttribute('srcdoc', '<html><body></body></html>');
+    
+                        document.body.appendChild(iframe);
+    
+                        iframe.contentWindow.addEventListener('afterprint', function () {
+                            iframe.parentNode.removeChild(iframe);
+                        });
+    
+                        iframe.addEventListener('load', function () {
+                            // Clone the image
+                            const image = document.getElementById('image').cloneNode();
+                            image.style.maxWidth = '100%';
+                            image.style.width = $("#width").val();
+    
+                            // Append the image to the iframe's body
+                            const body = iframe.contentDocument.body;
+                            body.style.textAlign = 'center';
+                            body.appendChild(image);
+    
+                            image.addEventListener('load', function () {
+                                // Invoke the print when the image is ready
+                                iframe.contentWindow.print();
+                            });
+                        });
                     });
                 });
             </script>
-        </div>
     </body>
 </html>
